# complete_rust

chapter-09/html-list/: Cargo.toml
chapter-09/html-list/src/: lib.rs
chapter-12/rudis_async/: Cargo.toml
chapter-12/rudis_async/src/: codec.rs  commands.rs  main.rs
chapter-12/rudis_sync/: Cargo.toml
chapter-12/rudis_sync/src/: commands.rs  main.rs
chapter-13/hyperurl/: Cargo.toml
chapter-13/hyperurl/src/: main.rs  service.rs
chapter-13/linksnap/: Cargo.toml
chapter-13/linksnap/src/: links.rs  main.rs  route_handlers.rs  state.rs
chapter-13/shorten/: Cargo.toml
chapter-13/shorten/src/: main.rs
chapter-15/btree/: Cargo.toml
chapter-15/btree-one-pass/: Cargo.toml
chapter-15/btree-one-pass/src/: btree.rs  lib.rs  node.rs
chapter-15/btree/src/: lib.rs  node.rs  tree.rs
chapter-15/rb-tree/: Cargo.toml
chapter-15/rb-tree/src/: lib.rs  node.rs  rb_tree.rs  repo.rs
chapter-15/robust-trees/: Cargo.toml
chapter-15/robust-trees/src/: lib.rs  node.rs  rb_tree.rs
