[package]
name = "rudis_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
futures = "0.3.26"
lazy_static = "1.4.0"
resp = { git = "https://github.com/creativcoder/resp", version = "1.0.2" }
tokio = { version = "1.25.0", features = ["net", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
