[package]
name = "hyperurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["runtime", "server", "http1", "stream"] }
lazy_static = "1.4.0"
log = "0.4.17"
rust-crypto = "0.2.36"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
