[package]
name = "linksnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
anyhow = "1.0.69"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
